App casi terminada

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -81,7 +81,7 @@
     <string name="accept">Accept</string>
     <string name="cycle">Cycle</string>
     <string name="good_morning">Good morning, User! 👋 </string>
-    <string name="recommended_routine">How about doing Calisthenics today?</string>
+    <string name="recommended_routine">Try this routine</string>
     <string name="url_layout">Type the routine\'s URL</string>
     <string name="profile_saved">Profile saved</string>
     <string name="morning">Good morning</string>
