--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -82,7 +82,7 @@
     <string name="accept">Aceptar</string>
     <string name="cycle">Ciclo</string>
     <string name="good_morning">¡Buen día, Usuario! 👋 </string>
-    <string name="recommended_routine">¿Por qué no pruebas Calistenia hoy?</string>
+    <string name="recommended_routine">Prueba esta rutina</string>
     <string name="url_layout">Ingrese URL de la rutina</string>
     <string name="profile_saved">Perfil guardado</string>
     <string name="play">Ejecutar</string>
