--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -140,4 +140,12 @@
     <string name="scan_your_code">Scan your code</string>
     <string name="no_perm">You need the camera permission to be able to scan codes</string>
     <string name="no_app">No App Available</string>
+
+    <string-array name="difficulties">
+        <item name="rookie">Rookie</item>
+        <item name="beginner">Beginner</item>
+        <item name="intermediate">Intermediate</item>
+        <item name="advanced">Advanced</item>
+        <item name="expert">Expert</item>
+    </string-array>
 </resources>
