--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,7 +26,7 @@
     </string-array>
     <string name="gender">Gender</string>
     <string name="femenine">Female</string>
-    <string name="masculine">Masculine</string>
+    <string name="masculine">Male</string>
     <string name="nav_header_desc">User image</string>
     <string name="nav_header_title">Kanye West</string>
     <string name="section_favourites">Favourites</string>
